src/components/nav-links/nav-links.css
.page-header .nav-links {
    width: 100%;
    max-height: 0px;
    padding: 0 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 32px;
    position: absolute;
    top: 66px;
    left: 0;
    z-index: -10;
    opacity: 0;
    background: linear-gradient(180deg, var(--light-cream) 50%, transparent);
    list-style: none;    
    transition: max-height .5s, padding .5s, opacity .5s;
}

.page-header .nav-links.open {
    max-height: calc(100vh - 66px);
    padding: 40px 0;
    opacity: 1;
}

@media screen and (min-width: 768px) {
    .page-header .nav-links,
    .page-header .nav-links.open {
        width: auto;
        height: auto;
        padding: 0 0;
        display: flex;
        flex-direction: row;
        align-items: center;
        gap: 33px;
        position: relative;
        top: 0;
        z-index: 10;
        background: var(--light-cream);
        transition: top 0s;
    }
}

